// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`team actions addTeamMember fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to add team member #10 to team #1. Please try again.",
    "type": "ADD_TEAM_MEMBER_ERROR",
  },
]
`;

exports[`team actions createTeam fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to create team. Please try again.",
    "type": "CREATE_TEAM_ERROR",
  },
]
`;

exports[`team actions deleteTeam fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to delete team #1. Please try again.",
    "type": "DELETE_TEAM_ERROR",
  },
]
`;

exports[`team actions deleteTeamMember fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to delete team member #10. Please try again.",
    "type": "DELETE_TEAM_MEMBER_ERROR",
  },
]
`;

exports[`team actions deleteTeamMemberList fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to delete team members. Please try again.",
    "type": "DELETE_TEAM_MEMBER_LIST_ERROR",
  },
]
`;

exports[`team actions fetchTeam fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to fetch team #1. Please refresh the page and try again.",
    "type": "FETCH_TEAM_ERROR",
  },
]
`;

exports[`team actions fetchTeamMembersPagination fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to fetch team members. Please refresh the page and try again.",
    "type": "FETCH_TEAM_MEMBERS_PAGINATION_ERROR",
  },
]
`;

exports[`team actions fetchTeams fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to fetch teams. Please refresh the page and try again.",
    "type": "FETCH_TEAMS_PAGINATION_ERROR",
  },
]
`;

exports[`team actions updateTeam fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 500],
    "reason": "Failed to update team #1. Please try again.",
    "type": "UPDATE_TEAM_ERROR",
  },
]
`;
